{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 30,
  "lineage": "8aeb46d1-b52e-8dd3-7b8c-d0831cf483e0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:route-table/rtb-081ae21206b1e8668",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-01f15f42709c38e42",
                "route_table_id": "rtb-081ae21206b1e8668",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-081ae21206b1e8668",
            "owner_id": "397760697576",
            "region": "us-east-1",
            "route_table_id": "rtb-081ae21206b1e8668",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008716cadc71d2791",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-021a9f3a1d79e2bbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:vpc/vpc-021a9f3a1d79e2bbe",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02ce373f0157fe6cb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0fbe5c37735decdf1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021a9f3a1d79e2bbe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081ae21206b1e8668",
            "owner_id": "397760697576",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d38339fb9cde6a7",
            "arn": "arn:aws:ec2:us-east-1:397760697576:elastic-ip/eipalloc-09d38339fb9cde6a7",
            "association_id": "eipassoc-04b649a8e5bf6ec0b",
            "domain": "vpc",
            "id": "eipalloc-09d38339fb9cde6a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-012367a3f13fcc1aa",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-98-94-232-223.compute-1.amazonaws.com",
            "public_ip": "98.94.232.223",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "eipalloc-09d38339fb9cde6a7",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:internet-gateway/igw-0cd05c69b52d3581d",
            "id": "igw-0cd05c69b52d3581d",
            "owner_id": "397760697576",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "igw-0cd05c69b52d3581d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d38339fb9cde6a7",
            "association_id": "eipassoc-04b649a8e5bf6ec0b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06d8ce2a7298155d8",
            "network_interface_id": "eni-012367a3f13fcc1aa",
            "private_ip": "10.0.1.191",
            "public_ip": "98.94.232.223",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1410c3d45a4dddb",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "nat-06d8ce2a7298155d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba855be70fcf856a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d8ce2a7298155d8",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ba855be70fcf856a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0ba855be70fcf856a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0512544b5d217c0cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d8ce2a7298155d8",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0512544b5d217c0cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0512544b5d217c0cf"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd05c69b52d3581d",
            "id": "r-rtb-07a69e3245d46985b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07a69e3245d46985b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07a69e3245d46985b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:route-table/rtb-0ba855be70fcf856a",
            "id": "rtb-0ba855be70fcf856a",
            "owner_id": "397760697576",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d8ce2a7298155d8",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtb-0ba855be70fcf856a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:route-table/rtb-0512544b5d217c0cf",
            "id": "rtb-0512544b5d217c0cf",
            "owner_id": "397760697576",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d8ce2a7298155d8",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtb-0512544b5d217c0cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:route-table/rtb-07a69e3245d46985b",
            "id": "rtb-07a69e3245d46985b",
            "owner_id": "397760697576",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd05c69b52d3581d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtb-07a69e3245d46985b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d6fe70abd5a301",
            "region": "us-east-1",
            "route_table_id": "rtb-0ba855be70fcf856a",
            "subnet_id": "subnet-0d879194411288858"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtbassoc-061d6fe70abd5a301",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed0f7a335de04343",
            "region": "us-east-1",
            "route_table_id": "rtb-0ba855be70fcf856a",
            "subnet_id": "subnet-0a81aed1b9e2666d2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtbassoc-0ed0f7a335de04343",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cccb02d69faf80c1",
            "region": "us-east-1",
            "route_table_id": "rtb-0512544b5d217c0cf",
            "subnet_id": "subnet-0e00bd11efb6f4748"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtbassoc-0cccb02d69faf80c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256d54e1225e195b",
            "region": "us-east-1",
            "route_table_id": "rtb-0512544b5d217c0cf",
            "subnet_id": "subnet-0e6f477fa50600cc2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtbassoc-0256d54e1225e195b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0995a9d70a809b036",
            "region": "us-east-1",
            "route_table_id": "rtb-07a69e3245d46985b",
            "subnet_id": "subnet-0d1410c3d45a4dddb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtbassoc-0995a9d70a809b036",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220b501b001c91ee",
            "region": "us-east-1",
            "route_table_id": "rtb-07a69e3245d46985b",
            "subnet_id": "subnet-0a59a353885b2bbdf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "rtbassoc-0220b501b001c91ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:subnet/subnet-0d879194411288858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d879194411288858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397760697576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "subnet-0d879194411288858",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:subnet/subnet-0a81aed1b9e2666d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a81aed1b9e2666d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397760697576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "subnet-0a81aed1b9e2666d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:subnet/subnet-0e00bd11efb6f4748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e00bd11efb6f4748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397760697576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "subnet-0e00bd11efb6f4748",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:subnet/subnet-0e6f477fa50600cc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6f477fa50600cc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397760697576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "subnet-0e6f477fa50600cc2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:subnet/subnet-0d1410c3d45a4dddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1410c3d45a4dddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "397760697576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "subnet-0d1410c3d45a4dddb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:subnet/subnet-0a59a353885b2bbdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a59a353885b2bbdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "397760697576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c1ac60c18b96a380"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "subnet-0a59a353885b2bbdf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:397760697576:vpc/vpc-0c1ac60c18b96a380",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c90ef35b6b2c2c15",
            "default_route_table_id": "rtb-087f017559fe45b2c",
            "default_security_group_id": "sg-003388ef87a7d165d",
            "dhcp_options_id": "dopt-0fbe5c37735decdf1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1ac60c18b96a380",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087f017559fe45b2c",
            "owner_id": "397760697576",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "397760697576",
            "id": "vpc-0c1ac60c18b96a380",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}